# src/main/kotlin/com/wutsi/earning/endpoint/ComputeController.kt
@@ -5,6 +5,7 @@ import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.RequestParam
 import org.springframework.web.bind.`annotation`.RestController
+import javax.validation.constraints.NotNull
 import kotlin.Int
 
 @RestController
@@ -12,10 +13,10 @@ public class ComputeController(
     private val `delegate`: ComputeDelegate
 ) {
     @GetMapping("/v1/earnings/compute")
-    @PreAuthorize(value = "hasAuthority('earning.admin')")
+    @PreAuthorize(value = "hasAuthority('earning-manage')")
     public fun invoke(
-        @RequestParam(name = "year", required = false) year: Int,
-        @RequestParam(name = "month", required = false) month: Int
+        @RequestParam(name = "year", required = true) @NotNull year: Int,
+        @RequestParam(name = "month", required = true) @NotNull month: Int
     ) {
         delegate.invoke(year, month)
     }
